# Wallet

./: .gitignore  .pre-commit-config.yaml  README  README.md  pyproject.toml  requirements.txt  task  tox.ini
.ssh/: id_rsa  id_rsa.pub
testproject/: conftest.py
testproject/registration/: models.py  serializers.py  urls.py  views.py
testproject/registration/tests/: test_registration_api.py
testproject/testproject/: permissions.py  settings.py  urls.py
testproject/transactions/: logic.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
testproject/transactions/migrations/: 0001_initial.py  0002_alter_transaction_commission_and_more.py  0003_alter_transaction_commission.py  0004_alter_transaction_status.py
testproject/transactions/tests/: test_transaction_api.py
testproject/wallets/: models.py  serializers.py  tests.py  urls.py  views.py
testproject/wallets/migrations/: 0001_initial.py  0002_alter_wallet_balance_alter_wallet_name_transaction.py  0003_delete_transaction.py  0004_alter_wallet_currency_alter_wallet_id_and_more.py  0005_alter_wallet_balance.py
testproject/wallets/tests/: test_wallet_api.py
